--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -58,25 +58,25 @@
         </div>
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Art Gallery</h1></a>
+                <a asp-controller="UI" asp-action="Index" class="navbar-brand"><h1 class="text-primary display-6">Art Gallery</h1></a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars text-primary"></span>
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="shop.html" class="nav-item nav-link">Artworks</a>
-                        <a href="shop-detail.html" class="nav-item nav-link">Artworks Detail</a>
+                        <a asp-controller="UI" asp-action="Artwork" class="nav-item nav-link">Artworks</a>
+                        <a asp-controller="UI" asp-action="ArtworkDetail" class="nav-item nav-link">Artworks Detail</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a href="cart.html" class="dropdown-item">Cart</a>
-                                <a href="chackout.html" class="dropdown-item">Checkout</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a asp-controller="UI" asp-action="Cart" class="dropdown-item">Cart</a>
+                                <a asp-controller="UI" asp-action="Checkout" class="dropdown-item">Checkout</a>
+                                <a asp-controller="UI" asp-action="Testimonial" class="dropdown-item">Testimonial</a>
+                                <a asp-controller="UI" asp-action="Page404" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Exhibition</a>
+                        <a asp-controller="UI" asp-action="Exhibition" class="nav-item nav-link">Exhibition</a>
                     </div>
                     <div class="d-flex m-3 me-0">
                         <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
@@ -124,8 +124,8 @@
                 <div class="row g-4">
                     <div class="col-lg-3">
                         <a href="#">
-                            <h1 class="text-primary mb-0">Fruitables</h1>
-                            <p class="text-secondary mb-0">Fresh products</p>
+                            <h1 class="text-primary mb-0">Art Gallery</h1>
+                            <p class="text-secondary mb-0">Real to real</p>
                         </a>
                     </div>
                     <div class="col-lg-6">
