--- a/ArtGallery/Views/Exhibition/Index.cshtml
+++ b/ArtGallery/Views/Exhibition/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["title"] = "Exhibition";
     Layout = "_UserLayout";
 
@@ -16,7 +15,7 @@
 </div>
 <!-- Single Page Header End -->
 <!-- Contact Start -->
-<div class="container-fluid contact py-5">
+@* <div class="container-fluid contact py-5">
     <div class="container py-5">
         <div class="p-5 bg-light rounded">
             <div class="row g-4">
@@ -64,6 +63,22 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div> *@
+<div class="col-md-6 col-lg-6 col-xl-4">
+    <div class="rounded position-relative fruite-item">
+        <div class="fruite-img">
+            <img src="img/fruite-item-5.jpg" class="img-fluid w-100 rounded-top" alt="">
+        </div>
+        <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">Fruits</div>
+        <div class="p-4 border border-secondary border-top-0 rounded-bottom">
+            <h4>Grapes</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod te incididunt</p>
+            <div class="d-flex justify-content-between flex-lg-wrap">
+                <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
+                <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
             </div>
         </div>
     </div>
