--- a/ArtGallery/Views/Shared/Page404.cshtml
+++ b/ArtGallery/Views/Shared/Page404.cshtml
@@ -1,8 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
     ViewData["title"] = "404 Error";
+    Layout = "_UserLayout";
+
 }
 
 <!-- Single Page Header start -->
