--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -58,15 +58,15 @@
         </div>
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a asp-controller="UI" asp-action="Index" class="navbar-brand"><h1 class="text-primary display-6">Art Gallery</h1></a>
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand"><h1 class="text-primary display-6">Art Gallery</h1></a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars text-primary"></span>
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                     <div class="navbar-nav mx-auto">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a asp-controller="UI" asp-action="Artwork" class="nav-item nav-link">Artworks</a>
-                        <a asp-controller="UI" asp-action="ArtworkDetail" class="nav-item nav-link">Artworks Detail</a>
+                        <a asp-controller="Home" asp-action="Index" class="nav-item nav-link active">Home</a>
+                        <a asp-controller="Artwork" asp-action="Index" class="nav-item nav-link">Artworks</a>
+                        <a asp-controller="Artwork" asp-action="Detail" class="nav-item nav-link">Artworks Detail</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
@@ -76,7 +76,7 @@
                                 <a asp-controller="UI" asp-action="Page404" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a asp-controller="UI" asp-action="Exhibition" class="nav-item nav-link">Exhibition</a>
+                        <a asp-controller="Exhibition" asp-action="Index" class="nav-item nav-link">Exhibition</a>
                     </div>
                     <div class="d-flex m-3 me-0">
                         <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
