--- a/ArtGallery/Views/Admin/Index.cshtml
+++ b/ArtGallery/Views/Admin/Index.cshtml
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Content Row -->
-    <div class="row">
+@*     <div class="row">
 
         <!-- Earnings (Monthly) Card Example -->
         <div class="col-xl-3 col-md-6 mb-4">
@@ -105,11 +105,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
 
     <!-- Content Row -->
 
-    <div class="row">
+@*     <div class="row">
 
         <!-- Area Chart -->
         <div class="col-xl-8 col-lg-7">
@@ -181,10 +181,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
 
     <!-- Content Row -->
-    <div class="row">
+    @* <div class="row">
 
         <!-- Content Column -->
         <div class="col-lg-6 mb-4">
@@ -346,7 +346,7 @@
             </div>
 
         </div>
-    </div>
+    </div> *@
 
 </div>
 <!-- /.container-fluid -->
