--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -70,7 +70,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a asp-controller="UI" asp-action="Cart" class="dropdown-item">Cart</a>
+                                <a asp-controller="Cart" asp-action="Index" class="dropdown-item">Cart</a>
                                 <a asp-controller="UI" asp-action="Checkout" class="dropdown-item">Checkout</a>
                                 <a asp-controller="UI" asp-action="Testimonial" class="dropdown-item">Testimonial</a>
                                 <a asp-controller="UI" asp-action="Page404" class="dropdown-item">404 Page</a>
