--- a/ArtGallery/Views/Artist/Index.cshtml
+++ b/ArtGallery/Views/Artist/Index.cshtml
@@ -2,8 +2,11 @@
 @{
     ViewData["title"] = "Create Artist";
 }
-@model IEnumerable<ArtGallery.Models.ArtistView> 
+@model IEnumerable<ArtGallery.Models.ArtistView>
 
+    <h2>
+        Artist List
+    </h2>
 <table class="table">
     <thead>
         <tr>
