--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -91,14 +91,6 @@
                             <div class="col-lg-12">
                                 <div class="mb-3">
                                     <h4>Additional</h4>
-                                    @*                                     <div class="mb-2">
-                                    <input type="radio" class="me-2" id="Categories-1" name="Categories-1" value="Beverages">
-                                    <label for="Categories-1"> Organic</label>
-                                    </div>
-                                    <div class="mb-2">
-                                    <input type="radio" class="me-2" id="Categories-2" name="Categories-1" value="Beverages">
-                                    <label for="Categories-2"> Fresh</label>
-                                    </div> *@
                                     <div class="mb-2">
                                         <input type="radio" class="me-2" id="Categories-3" name="Categories-1" value="Beverages">
                                         <label for="Categories-3"> Sales</label>
@@ -114,7 +106,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-12">
-                                <h4 class="mb-3">Featured products</h4>
+                               @*  <h4 class="mb-3">Featured products</h4>                            
                                 <div class="d-flex align-items-center justify-content-start">
                                     <div class="rounded me-4" style="width: 100px; height: 100px;">
                                         <img src="img/featur-1.jpg" class="img-fluid rounded" alt="">
@@ -171,19 +163,19 @@
                                             <h5 class="text-danger text-decoration-line-through">4.11 $</h5>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="d-flex justify-content-center my-4">
+                                </div> *@
+                                @* <div class="d-flex justify-content-center my-4">
                                     <a href="#" class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100">Vew More</a>
-                                </div>
+                                </div> *@
                             </div>
-                            <div class="col-lg-12">
+                           @*  <div class="col-lg-12">
                                 <div class="position-relative">
                                     <img src="img/banner-fruits.jpg" class="img-fluid w-100 rounded" alt="">
                                     <div class="position-absolute" style="top: 50%; right: 10px; transform: translateY(-50%);">
                                         <h3 class="text-secondary fw-bold">Fresh <br> Fruits <br> Banner</h3>
                                     </div>
                                 </div>
-                            </div>
+                            </div> *@
                         </div>
                     </div>
                     <div class="col-lg-9">
@@ -212,7 +204,7 @@
                                 }
                             }
 
-                            <div class="col-md-6 col-lg-6 col-xl-4">
+                           @*  <div class="col-md-6 col-lg-6 col-xl-4">
                                 <div class="rounded position-relative fruite-item">
                                     <div class="fruite-img">
                                         <img src="img/fruite-item-5.jpg" class="img-fluid w-100 rounded-top" alt="">
@@ -351,7 +343,7 @@
                                     <a href="#" class="rounded">6</a>
                                     <a href="#" class="rounded">&raquo;</a>
                                 </div>
-                            </div>
+                            </div> *@
                         </div>
                     </div>
                 </div>
