--- a/ArtGallery/Views/Exhibition/Index.cshtml
+++ b/ArtGallery/Views/Exhibition/Index.cshtml
@@ -5,6 +5,7 @@
 }
 @model IEnumerable<ArtGallery.Models.ExhibitionView>
 
+
 <!-- Single Page Header start -->
 <div class="container-fluid page-header py-5">
     <h1 class="text-center text-white display-6">Exhibition</h1>
@@ -25,11 +26,22 @@
                 {
                     <div class="carousel-item @(isFirst ? "active" : "")">
                         <img src="@exhibition.ImageUrl" class="d-block w-100" alt="@exhibition.ExhibitionName">
+                        <div class="carousel-caption d-none d-md-block">
+                            <a href="@Url.Action("Detail", "Exhibition", new { id = exhibition.ExhibitionId })" class="btn btn-primary">View Details</a>
+                        </div>
                     </div>
                     isFirst = false;
                 }
             }
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
 </div>
 <!-- Contact End -->
