--- a/ArtGallery/Views/Shared/_Layout.cshtml
+++ b/ArtGallery/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" asp-controller="Exhibition" asp-action="index1">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Exhibition Management</span>
                 </a>
