--- a/ArtGallery/Views/Account/Register.cshtml
+++ b/ArtGallery/Views/Account/Register.cshtml
@@ -42,48 +42,33 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="user">
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                               placeholder="First Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                               placeholder="Last Name">
-                                    </div>
+                            <form method="post" class="user">
+                                <div class="form-group">
+                                    <input type="text" class="form-control form-control-user" id="exampleUserName"
+                                            placeholder="User name" name="username">
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                           placeholder="Email Address">
+                                    <input type="password" class="form-control form-control-user"
+                                            id="exampleInputPassword" placeholder="Password" name="password">
                                 </div>
                                 <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                               id="exampleInputPassword" placeholder="Password">
+                                    <div class="form-check col-sm-4 mb-3 mb-sm-0 ml-3">
+                                        <input checked class="form-check-input" type="radio" name="role" id="inlineRadio1" value="Customer">
+                                        <label class="form-check-label" for="inlineRadio1">Customer</label>
                                     </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                               id="exampleRepeatPassword" placeholder="Repeat Password">
+                                    <div class="form-check col-sm-4">
+                                        <input class="form-check-input" type="radio" name="role" id="inlineRadio2" value="Artist">
+                                        <label class="form-check-label" for="inlineRadio2">Artist</label>
                                     </div>
                                 </div>
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                
+                                <button class="btn btn-primary btn-user btn-block" type="submit">
                                     Register Account
-                                </a>
-                                <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Register with Google
-                                </a>
-                                <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                    <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-                                </a>
+                                </button>
                             </form>
                             <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
-                            </div>
-                            <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+                                <a class="small" asp-action="Login">Already have an account? Login!</a>
                             </div>
                         </div>
                     </div>
