--- a/ArtGallery/Views/Admin/Index.cshtml
+++ b/ArtGallery/Views/Admin/Index.cshtml
@@ -5,6 +5,8 @@
     Layout = "_Layout";
 
 }
+@model IList<ArtGallery.Models.ArtistView>
+
 <!-- Begin Page Content -->
 <div class="container-fluid">
 
@@ -15,4 +17,33 @@
             <i class="fas fa-download fa-sm text-white-50"></i> Generate Report
         </a>
     </div>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ArtistId</th>
+                <th>ArtistName</th>
+                <th>Nationality</th>
+                <th>Biography</th>
+                <th>Website</th>
+                <th>Email</th>
+                <th>PhoneNumber</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var artist in Model)
+            {
+                <tr>
+                    <td>@artist.ArtistId</td>
+                    <td>@artist.ArtistName</td>
+                    <td>@artist.Nationality</td>
+                    <td>@artist.Biography</td>
+                    <td>@artist.Website</td>
+                    <td>@artist.Email</td>
+                    <td>@artist.PhoneNumber</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
 </div>
