--- a/ArtGallery/Views/Exhibition/Detail.cshtml
+++ b/ArtGallery/Views/Exhibition/Detail.cshtml
@@ -6,7 +6,14 @@
 
 @model ArtGallery.Models.ExhibitionView
 
-<h1>Detail</h1>
+<div class="container-fluid page-header py-5">
+    <h1 class="text-center text-white display-6">Exhibition Detail</h1>
+    <ol class="breadcrumb justify-content-center mb-0">
+        <li class="breadcrumb-item"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Pages</a></li>
+        <li class="breadcrumb-item active text-white">Exhibition Detail</li>
+    </ol>
+</div>
 
 <div class="container my-5">
     <h1 class="display-4">@Model.ExhibitionName</h1>
