--- a/ArtGallery/Views/Shared/_Layout.cshtml
+++ b/ArtGallery/Views/Shared/_Layout.cshtml
@@ -93,9 +93,9 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" asp-controller="Artwork" asp-action="index1">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Payment Management</span>
+                    <span>Artwork Management</span>
                 </a>
             </li>
 
