--- a/ArtGallery/Views/Artwork/Delete.cshtml
+++ b/ArtGallery/Views/Artwork/Delete.cshtml
@@ -1,21 +1,12 @@
-﻿
+﻿@model ArtGallery.Models.ArtworkView
+
 @{
-    ViewData["title"] = "ArtworkDetail";
-    Layout = "_UserLayout";
-
+    ViewData["Title"] = "Delete Artwork";
 }
-@model ArtGallery.Models.ArtworkView
 
-<!-- Single Page Header start -->
-<div class="container-fluid page-header py-5">
-    <h1 class="text-center text-white display-6">Artwork Detail</h1>
-    <ol class="breadcrumb justify-content-center mb-0">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-        <li class="breadcrumb-item active text-white">Artwork Detail</li>
-    </ol>
-</div>
-<!-- Single Page Header End -->
+<h2>Delete Artwork</h2>
+
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>@Model.Title</h4>
     <hr />
@@ -29,10 +20,16 @@
         <dt class="col-sm-2">Status</dt>
         <dd class="col-sm-10">@Model.Status</dd>
         <dt class="col-sm-2">Price</dt>
-        <dd class="col-sm-10">@Model.Price.ToString("C")</dd>
+        <dd class="col-sm-10">@Model.Price</dd>
         <dt class="col-sm-2">Created At</dt>
         <dd class="col-sm-10">@Model.CreateAt</dd>
         <dt class="col-sm-2">Updated At</dt>
         <dd class="col-sm-10">@Model.UpdateAt</dd>
     </dl>
 </div>
+
+<form asp-action="DeleteConfirmed" method="post">
+    <input type="hidden" asp-for="ArtworkId" />
+    <input type="submit" value="Delete" class="btn btn-danger" /> |
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
+</form>
