--- a/ArtGallery/Views/Auction/Index.cshtml
+++ b/ArtGallery/Views/Auction/Index.cshtml
@@ -38,12 +38,12 @@
                                     <input type="hidden" name="AuctionId" value="@auction.AuctionId" />
                                     <button type="submit" class="btn btn-primary mt-2">Place Bid</button>
                                 </form>
-                                <a href="@Url.Action("Edit", new { id = auction.AuctionId })" class="btn btn-warning mt-2">
+@*                                 <a href="@Url.Action("Edit", new { id = auction.AuctionId })" class="btn btn-warning mt-2">
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 <a href="@Url.Action("Delete", new { id = auction.AuctionId })" class="btn btn-danger mt-2">
                                     <i class="fas fa-trash"></i>
-                                </a>
+                                </a> *@
                             </div>
                         </div>
                     </div>
