--- a/ArtGallery/Views/Shared/_UserLayout.cshtml
+++ b/ArtGallery/Views/Shared/_UserLayout.cshtml
@@ -66,7 +66,7 @@
                     <div class="navbar-nav mx-auto">
                         <a asp-controller="Home" asp-action="Index" class="nav-item nav-link active">Home</a>
                         <a asp-controller="Artwork" asp-action="Index" class="nav-item nav-link">Artworks</a>
-                        <a asp-controller="Artwork" asp-action="Detail" class="nav-item nav-link">Artworks Detail</a>
+                        <a asp-controller="Auction" asp-action="Index" class="nav-item nav-link">Auction</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
