--- a/ArtGallery/Views/Admin/Index.cshtml
+++ b/ArtGallery/Views/Admin/Index.cshtml
@@ -18,7 +18,7 @@
         </a>
     </div>
 
-    <table class="table">
+    @* <table class="table">
         <thead>
             <tr>
                 <th>ArtistId</th>
@@ -45,5 +45,6 @@
             }
         </tbody>
     </table>
+    *@
 
 </div>
