--- a/ArtGallery/Views/Artwork/Detail.cshtml
+++ b/ArtGallery/Views/Artwork/Detail.cshtml
@@ -16,7 +16,35 @@
     </ol>
 </div>
 <!-- Single Page Header End -->
-<div>
+<h2>@Model.Title</h2>
+<hr />
+<dl class="row">
+    <dt class="col-sm-2">Description</dt>
+    <dd class="col-sm-10">@Model.Description</dd>
+    <dt class="col-sm-2">Image</dt>
+    <dd class="col-sm-10"><img src="@Model.ImageURL" alt="@Model.Title" class="img-fluid" /></dd>
+    <dt class="col-sm-2">Category</dt>
+    <dd class="col-sm-10">@Model.Category</dd>
+    <dt class="col-sm-2">Status</dt>
+    <dd class="col-sm-10">@Model.Status</dd>
+    @if (Model.Category == Category.ForSale)
+    {
+        <dt class="col-sm-2">Price</dt>
+        <dd class="col-sm-10">@Model.Price.ToString("C")</dd>
+        <dt class="col-sm-2"></dt>
+        <dd class="col-sm-10">
+            <form asp-action="AddToCart" asp-controller="Cart" method="post">
+                <input type="hidden" name="id" value="@Model.ArtworkId" />
+                <div class="form-group">
+                    <label for="quantity">Quantity</label>
+                    <input type="number" name="quantity" value="1" min="1" class="form-control" />
+                </div>
+                <button type="submit" class="btn btn-primary mt-2">Add to Cart</button>
+            </form>
+        </dd>
+    }
+</dl>
+@* <div>
     <h4>@Model.Title</h4>
     <hr />
     <dl class="row">
@@ -36,3 +64,4 @@
         <dd class="col-sm-10">@Model.UpdateAt</dd>
     </dl>
 </div>
+ *@
