--- a/ArtGallery/Views/Artwork/Detail.cshtml
+++ b/ArtGallery/Views/Artwork/Detail.cshtml
@@ -33,12 +33,8 @@
         <dd class="col-sm-10">@Model.Price.ToString("C")</dd>
         <dt class="col-sm-2"></dt>
         <dd class="col-sm-10">
-            <form asp-action="AddToCart" asp-controller="Cart" method="post">
-                <input type="hidden" name="id" value="@Model.ArtworkId" />
-                <div class="form-group">
-                    <label for="quantity">Quantity</label>
-                    <input type="number" name="quantity" value="1" min="1" class="form-control" />
-                </div>
+            <form asp-controller="Cart" asp-action="AddToCart" method="post">
+                <input type="hidden" name="artworkId" value="@Model.ArtworkId" />
                 <button type="submit" class="btn btn-primary mt-2">Add to Cart</button>
             </form>
         </dd>
