--- a/ArtGallery/Views/Artwork/Delete.cshtml
+++ b/ArtGallery/Views/Artwork/Delete.cshtml
@@ -31,5 +31,5 @@
 <form asp-action="DeleteConfirmed" method="post">
     <input type="hidden" asp-for="ArtworkId" />
     <input type="submit" value="Delete" class="btn btn-danger" /> |
-    <a href="@Url.Action("Index")" class="btn btn-secondary">Back to List</a>
+    <a href="@Url.Action("Admin")" class="btn btn-secondary">Back to List</a>
 </form>
