--- a/ArtGallery/Views/Exhibition/Delete.cshtml
+++ b/ArtGallery/Views/Exhibition/Delete.cshtml
@@ -25,7 +25,7 @@
         <form asp-action="Delete">
             <input type="hidden" asp-for="ExhibitionId" />
             <button type="submit" class="btn btn-danger">Delete</button>
-            <a href="@Url.Action("Index1")" class="btn btn-secondary">Cancel</a>
+            <a href="@Url.Action("Admin")" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
