--- a/ArtGallery/Views/Shared/_Layout.cshtml
+++ b/ArtGallery/Views/Shared/_Layout.cshtml
@@ -60,8 +60,8 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         @* <h6 class="collapse-header">Custom Components:</h6> *@
-                        <a class="collapse-item" asp-controller="Admin" asp-action="LoginManagement">Login</a>
-                        <a class="collapse-item" asp-controller="Admin" asp-action="Authorization">Authorization</a>
+                        <a class="collapse-item" asp-controller="Artist" asp-action="Index">Artist Management</a>
+                        <a class="collapse-item" asp-controller="Customer" asp-action="Index">Customer Management</a>
                     </div>
                 </div>
             </li>
@@ -86,14 +86,14 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Exhibition" asp-action="index1">
+                <a class="nav-link" asp-controller="Exhibition" asp-action="Admin">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Exhibition Management</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Artwork" asp-action="index1">
+                <a class="nav-link" asp-controller="Artwork" asp-action="Admin">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Artwork Management</span>
                 </a>
