--- a/ArtGallery/Views/Artwork/Delete.cshtml
+++ b/ArtGallery/Views/Artwork/Delete.cshtml
@@ -28,7 +28,7 @@
     </dl>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
+<form asp-action="Delete" method="post">
     <input type="hidden" asp-for="ArtworkId" />
     <input type="submit" value="Delete" class="btn btn-danger" /> |
     <a href="@Url.Action("Admin")" class="btn btn-secondary">Back to List</a>
