--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -108,7 +108,7 @@
                                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                                     @if (artwork.Category == Category.ForSale)
                                                     {
-                                                        <p class="text-dark fs-5 fw-bold mb-0">@artwork.Price.ToString("C")</p>
+                                                        <p class="text-dark fs-5 fw-bold mb-0">@artwork.Price</p>
                                                     }                                                    
 @*                                                     <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to cart</a>
  *@                                                </div>
