--- a/ArtGallery/Views/Artist/Edit.cshtml
+++ b/ArtGallery/Views/Artist/Edit.cshtml
@@ -1,53 +1,59 @@
-﻿@model Artist
+﻿@model ArtGallery.Models.ArtistView
 
 @{
-    ViewData["Title"] = "Edit artist";
+    ViewData["Title"] = "Edit";
 }
 
-<h2>Edit artist</h2>
+<h1>Edit</h1>
 
-<form asp-action="Edit">
-    <div class="form-group">
-        <label asp-for="ArtistId" class="control-label"></label>
-        <input asp-for="ArtistId" class="form-control" />
-        <span asp-validation-for="ArtistId" class="text-danger"></span>
+<h4>Artist</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ArtistId" />
+            <div class="form-group">
+                <label asp-for="UserName" class="control-label"></label>
+                <input asp-for="UserName" class="form-control" disabled />
+            </div>
+            <div class="form-group">
+                <label asp-for="Nationality" class="control-label"></label>
+                <input asp-for="Nationality" class="form-control"/>
+            </div>
+             <div class="form-group">
+                <label asp-for="Biography" class="control-label"></label>
+                <input asp-for="Biography" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="Website" class="control-label"></label>
+                <input asp-for="Website" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArtistName" class="control-label"></label>
+                <input asp-for="ArtistName" class="form-control" />
+                <span asp-validation-for="ArtistName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label asp-for="ArtistName" class="control-label"></label>
-        <input asp-for="ArtistName" class="form-control" />
-        <span asp-validation-for="ArtistName" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Nationality" class="control-label"></label>
-        <input asp-for="Nationality" class="form-control" />
-        <span asp-validation-for="Nationality" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Biography" class="control-label"></label>
-        <input asp-for="Biography" class="form-control" />
-        <span asp-validation-for="Biography" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Website" class="control-label"></label>
-        <input asp-for="Website" class="form-control" />
-        <span asp-validation-for="Website" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="PhoneNumber" class="control-label"></label>
-        <input asp-for="PhoneNumber" class="form-control" />
-        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-    </div>
-    <input type="hidden" asp-for="ArtistId" />
-    <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary" />
-    </div>
-</form>
-<a asp-action="Index">Back to List</a>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
 @section Scripts {
     @{
