--- a/ArtGallery/Views/Artwork/Create.cshtml
+++ b/ArtGallery/Views/Artwork/Create.cshtml
@@ -46,14 +46,14 @@
         </select>
         <span asp-validation-for="Status" class="text-danger"></span>
     </div>
-    <div class="form-group">
+    @* <div class="form-group">
         <label asp-for="CreateAt" class="control-label"></label>
         <input asp-for="CreateAt" class="form-control" readonly />
     </div>
     <div class="form-group">
         <label asp-for="UpdateAt" class="control-label"></label>
         <input asp-for="UpdateAt" class="form-control" readonly />
-    </div>
+    </div> *@
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
