--- a/ArtGallery/Views/Customer/Index.cshtml
+++ b/ArtGallery/Views/Customer/Index.cshtml
@@ -25,6 +25,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Address)
             </th>
+            <th>
+                Action
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -48,11 +51,9 @@
                     @Html.DisplayFor(modelItem => item.Address)
                 </td>
                 <td>
-                    <a href="@Url.Action("Edit", new { id = item.CustomerId })" class="btn btn-warning mb-2" title="Edit">
+                    <a href="@Url.Action("Edit", new { id = item.CustomerId })" class="btn btn-warning" title="Edit">
                         <i class="fas fa-edit"></i>
                     </a>
-                </td>
-                <td>
                     <a href="@Url.Action("Delete", new { id = item.CustomerId })" class="btn btn-danger" title="Delete">
                         <i class="fas fa-trash"></i>
                     </a>
