--- a/ArtGallery/Views/Artwork/Admin.cshtml
+++ b/ArtGallery/Views/Artwork/Admin.cshtml
@@ -15,6 +15,7 @@
     <thead>
         <tr>
             <th>Title</th>
+            <th>Artist</th>
             <th>Description</th>
             <th>Category</th>
             <th>Status</th>
@@ -27,6 +28,7 @@
         {
             <tr>
                 <td>@item.Title</td>
+                <td>@item.ArtistName</td>
                 <td>@item.Description</td>
                 <td>@item.Category</td>
                 <td>@item.Status</td>
