--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -104,6 +104,7 @@
                                             <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">@artwork.Category</div>
                                             <div class="p-4 border border-secondary border-top-0 rounded-bottom">
                                                 <h4>@artwork.Title</h4>
+                                                <p>@artwork.ArtistName</p>
                                                 <p>@artwork.Description</p>
                                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                                     @if (artwork.Category == Category.ForSale)
