--- a/ArtGallery/Views/Artwork/Create.cshtml
+++ b/ArtGallery/Views/Artwork/Create.cshtml
@@ -2,9 +2,10 @@
 @{
     ViewData["title"] = "Create Artwork";
     Layout = "_Layout";
+    var artists = ViewBag.Artist;
 }
 
-@model ArtGallery.Models.ArtworkView
+@model ArtGallery.Models.ArtworkCreate
 
 <h2>Create Artwork</h2>
 
@@ -40,11 +41,21 @@
     <div class="form-group">
         <label asp-for="Status" class="control-label"></label>
         <select asp-for="Status" class="form-control">
-            <option value="Available">Available</option>
+            <option value="ForSale">For Sale</option>
             <option value="Auction">Auction</option>
             <option value="Sold">Sold</option>
         </select>
         <span asp-validation-for="Status" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ArtistId" class="control-label"></label>
+        <select asp-for="ArtistId" class="form-control">
+            @foreach (Artist artist in artists)
+            {
+                <option value="@artist.ArtistId">@artist.ArtistName</option>
+            }
+        </select>
+        <span asp-validation-for="ArtistId" class="text-danger"></span>
     </div>
     @* <div class="form-group">
         <label asp-for="CreateAt" class="control-label"></label>
