--- a/ArtGallery/Views/Artwork/Detail.cshtml
+++ b/ArtGallery/Views/Artwork/Detail.cshtml
@@ -19,6 +19,8 @@
 <h2>@Model.Title</h2>
 <hr />
 <dl class="row">
+    <dt class="col-sm-2">Artist</dt>
+    <dd class="col-sm-10">@Model.ArtistName</dd>
     <dt class="col-sm-2">Description</dt>
     <dd class="col-sm-10">@Model.Description</dd>
     <dt class="col-sm-2">Image</dt>
