--- a/ArtGallery/Views/Artwork/Edit.cshtml
+++ b/ArtGallery/Views/Artwork/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@model ArtGallery.Models.ArtworkView
-
+﻿@model ArtGallery.Models.ArtworkEdit
 @{
     ViewData["Title"] = "Edit Artwork";
+    var artists = ViewBag.Artist;
 }
 
 <h2>Edit Artwork</h2>
 
 <form asp-action="Edit" method="post">
+    <input asp-for="ArtworkId" class="form-control" type="hidden"/>
     <div class="form-group">
         <label asp-for="Title" class="control-label"></label>
         <input asp-for="Title" class="form-control" />
@@ -43,6 +44,16 @@
             <option value="Sold">Sold</option>
         </select>
         <span asp-validation-for="Status" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ArtistId" class="control-label"></label>
+        <select asp-for="ArtistId" class="form-control">
+            @foreach (Artist artist in artists)
+            {
+                <option value="@artist.ArtistId">@artist.ArtistName</option>
+            }
+        </select>
+        <span asp-validation-for="ArtistId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <input type="submit" value="Save" class="btn btn-primary" />
