--- a/ArtGallery/Views/Artwork/Create.cshtml
+++ b/ArtGallery/Views/Artwork/Create.cshtml
@@ -56,6 +56,16 @@
         <input asp-for="UpdateAt" class="form-control" readonly />
     </div> *@
     <div class="form-group">
+        <label asp-for="ArtistId" class="control-label"></label>
+        <select asp-for="ArtistId" class="form-control">
+            @foreach (Artist artist in artists)
+            {
+                <option value="@artist.ArtistId">@artist.ArtistName</option>
+            }
+        </select>
+        <span asp-validation-for="ArtistId" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
 </form>
