--- a/ArtGallery/Views/Artwork/Index.cshtml
+++ b/ArtGallery/Views/Artwork/Index.cshtml
@@ -92,7 +92,7 @@
                                                 <div class="d-flex justify-content-between flex-lg-wrap">
                                                     @if (artwork.Category == Category.ForSale)
                                                     {
-                                                        <p class="text-dark fs-5 fw-bold mb-0">@artwork.Price</p>
+                                                        <p class="text-dark fs-5 fw-bold mb-0">@artwork.Price?.ToString("C")</p>
                                                     }                                                    
                                                  </div>
                                             </div>
