--- a/ArtGallery/Views/Artwork/Admin.cshtml
+++ b/ArtGallery/Views/Artwork/Admin.cshtml
@@ -32,7 +32,7 @@
                 <td>@item.Description</td>
                 <td>@item.Category</td>
                 <td>@item.Status</td>
-                <td>@item.Price</td>
+                <td>@item.Price?.ToString("C")</td>
                 <td>
                     <a href="@Url.Action("Edit", new { id = item.ArtworkId })" class="btn btn-warning">
                         <i class="fas fa-edit"></i>
