--- a/ArtGallery/Views/Artwork/Delete.cshtml
+++ b/ArtGallery/Views/Artwork/Delete.cshtml
@@ -20,7 +20,7 @@
         <dt class="col-sm-2">Status</dt>
         <dd class="col-sm-10">@Model.Status</dd>
         <dt class="col-sm-2">Price</dt>
-        <dd class="col-sm-10">@Model.Price</dd>
+        <dd class="col-sm-10">@Model.Price?.ToString("C")</dd>
         <dt class="col-sm-2">Created At</dt>
         <dd class="col-sm-10">@Model.CreateAt</dd>
         <dt class="col-sm-2">Updated At</dt>
